Add the ability to force VC creation
